apps/ddns-updater/install/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ddns-updater
  namespace: ddns-updater
spec:
  type: ClusterIP
  selector:
    app: ddns-updater
  IPFamilyPolicy: RequireDualStack
  IPFamilies:
    - IPv4
    - IPv6
  ports:
    - name: webui
      protocol: TCP
      port: 8000
      targetPort: 8000
